--- a/horde.html
+++ b/horde.html
@@ -163,18 +163,24 @@
                 <tbody>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <td>BiggiBossss</td>
+                        <td>69</td>
+                        <td><a href="https://www.youtube.com/watch?v=OHzrAOsY7C4&ab_channel=BiggiBossss-%D0%9D%D0%B5%D0%94%D0%BE%D0%A1%D1%82%D1%80%D0%B8%D0%BC%D1%8B" target="_blank">Part 1</a> <a href="https://www.youtube.com/watch?v=ARLNlsqMN0I&ab_channel=BiggiBossss-%D0%9D%D0%B5%D0%94%D0%BE%D0%A1%D1%82%D1%80%D0%B8%D0%BC%D1%8B">Part 2</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>WarCrabft</td>
                         <td>55</td>
                         <td><a href="https://www.youtube.com/watch?v=tjRUXaquzTg&t=2551s&ab_channel=ManaGroveNoCommentaryGameplays" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>A.damz</td>
                         <td>39</td>
                         <td><a href="https://www.youtube.com/watch?v=6umXwNlY7A4&t=1421s&ab_channel=Qu%C3%A2nQuanhQu%E1%BA%A9n" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>HunkGeniX59</td>
                         <td>27</td>
                         <td><a href="https://www.youtube.com/watch?v=vyfBu5ZlGRY&ab_channel=HunkGeniX59" target="_blank">Full</a></td>
@@ -367,7 +373,7 @@
                 </thead>
                 <tbody>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
                         <td class="dropup">
                             <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button><br><small class="text-warning">(HORDE IMMUNITY)</small>
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
@@ -546,27 +552,42 @@
                 </thead>
                 <tbody>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
+                        <td class="dropup">
+                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button>
+                            <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
+                                <li><small class="dropdown-item-text text-light">gogu7382</small></li>
+                                <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
+                                <li><small class="dropdown-item-text text-light">HiRUnknown</small></li>
+                                <li><small class="dropdown-item-text text-light">XxFriction</small></li>
+                                <li><small class="dropdown-item-text text-light">YupItsMeh</small></li>
+                            </ul>
+                        </td>
+                        <td>75</td>
+                        <td><a href="https://www.twitch.tv/videos/1804004015" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td class="dropup">
                             <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Humildad</button>
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
-                                <li><small class="dropdown-item-text text-light">tokuhime1582</small></li>
-                                <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
-                                <li><small class="dropdown-item-text text-light">MVP_Popeye</small></li>
-                                <li><small class="dropdown-item-text text-light">PsychoPenetrador</small></li>
+                                <li><small class="dropdown-item-text text-light">gogu7382</small></li>
+                                <li><small class="dropdown-item-text text-light">Wolf Toches MDLG</small></li>
+                                <li><small class="dropdown-item-text text-light">HiRUnknown</small></li>
+                                <li><small class="dropdown-item-text text-light">terihlon</small></li>
                             </ul>
                         </td>
                         <td>64</td>
                         <td><a href="https://www.youtube.com/watch?v=usyUM4H49_s&t=8779s&ab_channel=KimPetrasandGames" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>WesleyAnge</td>
                         <td>61</td>
                         <td><a href="https://www.youtube.com/watch?v=zGT5wC5MUBI&ab_channel=WesleyAnge" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
+                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
                         <td>SiberianPsych0</td>
                         <td>41</td>
                         <td><a href="https://www.youtube.com/watch?v=8wIvRcx-KJg&ab_channel=SiberianPsych0" target="_blank">Full</a></td>
