--- a/horde.html
+++ b/horde.html
@@ -60,7 +60,7 @@
                 </thead>
                 <tbody>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
                         <td>Senku_Jo</td>
                         <td>66</td>
                         <td><a href="https://www.youtube.com/watch?v=guZsazMirJI&ab_channel=Senku_Jo" target="_blank">Full</a></td>
@@ -276,7 +276,7 @@
                 </thead>
                 <tbody>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
                         <td>Senku_Jo2</td>
                         <td>55</td>
                         <td><a href="https://www.youtube.com/watch?v=VRUy7Q9YTqg&ab_channel=Senku_Jo2" target=" _blank">Full</a></td>
@@ -373,7 +373,9 @@
                 </thead>
                 <tbody>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
+                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i>
+                            <br><img src="images/trophy.png"><img src="images/trophy.png">
+                        </th>
                         <td class="dropup">
                             <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button><br><small class="text-warning">(HORDE IMMUNITY)</small>
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
@@ -421,63 +423,6 @@
                         </td>
                         <td>74</td>
                         <td><a href="https://www.twitch.tv/videos/1934502705" target="_blank">Full</a></td>
-                    </tr>
-                    <tr class="text-center align-middle">
-                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
-                        <td class="dropup">
-                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button>
-                            <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
-                                <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
-                                <li><small class="dropdown-item-text text-light">gogu7382</small></li>
-                                <li><small class="dropdown-item-text text-light">HiRUnknow</small></li>
-                                <li><small class="dropdown-item-text text-light">XxFriction</small></li>
-                                <li><small class="dropdown-item-text text-light">YupItsMeh</small></li>
-                            </ul>
-                        </td>
-                        <td>71</td>
-                        <td><a href="https://www.youtube.com/watch?v=FJgskJbNE_w" target="_blank">Full</a></td>
-                    </tr>
-                    <tr class="text-center align-middle">
-                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
-                        <td class="dropup">
-                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button>
-                            <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
-                                <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
-                                <li><small class="dropdown-item-text text-light">gogu7332</small></li>
-                                <li><small class="dropdown-item-text text-light">LegioX_DeadlySin</small></li>
-                                <li><small class="dropdown-item-text text-light">ABA-180MM</small></li>
-                            </ul>
-                        </td>
-                        <td>68</td>
-                        <td><a href="https://www.youtube.com/watch?v=FJgskJbNE_w" target="_blank">Full</a></td>
-                    </tr>
-                    <tr class="text-center align-middle">
-                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
-                        <td class="dropup">
-                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button>
-                            <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
-                                <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
-                                <li><small class="dropdown-item-text text-light">gogu7332</small></li>
-                                <li><small class="dropdown-item-text text-light">XxFriction</small></li>
-                                <li><small class="dropdown-item-text text-light">DC GOAT</small></li>
-                            </ul>
-                        </td>
-                        <td>61</td>
-                        <td><a href="https://www.youtube.com/watch?v=7vyWeRqXEE0&ab_channel=LegioXWintersky" target="_blank">Full</a></td>
-                    </tr>
-                    <tr class="text-center align-middle">
-                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
-                        <td class="dropup">
-                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button>
-                            <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
-                                <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
-                                <li><small class="dropdown-item-text text-light">gogu7332</small></li>
-                                <li><small class="dropdown-item-text text-light">LegioX_DeadlySin</small></li>
-                                <li><small class="dropdown-item-text text-light">HiRUnknown</small></li>
-                            </ul>
-                        </td>
-                        <td>52</td>
-                        <td><a href="https://www.youtube.com/watch?v=J_mgv-MR5iE&ab_channel=LegioXWintersky" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
