--- a/horde.html
+++ b/horde.html
@@ -69,13 +69,19 @@
                         </td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <th scope="row"><img src="images/secondPlace.png "><i class="fa-solid fa-people-group text-success"></i></th>
+                        <td>bomicbon</td>
+                        <td>34</td>
+                        <td><a href="https://www.youtube.com/watch?v=CjFBEdCUWmE&ab_channel=bomicbon" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>titojimmyyy</td>
                         <td>32</td>
                         <td><a href="https://www.youtube.com/watch?v=hwuhoOitGNI" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/thirdPlace.png "><i class="fa-solid fa-people-group text-success"></i></th>
+                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>RD_1998</td>
                         <td>27</td>
                         <td><a href="https://www.youtube.com/watch?v=pPBRclSTVQA&ab_channel=Pickledrice" target="_blank">Full</a></td>
@@ -169,21 +175,29 @@
                 <tbody>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
-                        <td>BiggiBossss</td>
-                        <td>69</td>
-                        <td><a href="https://www.youtube.com/watch?v=OHzrAOsY7C4&ab_channel=BiggiBossss-%D0%9D%D0%B5%D0%94%D0%BE%D0%A1%D1%82%D1%80%D0%B8%D0%BC%D1%8B" target="_blank">Part 1</a> <a href="https://www.youtube.com/watch?v=ARLNlsqMN0I&ab_channel=BiggiBossss-%D0%9D%D0%B5%D0%94%D0%BE%D0%A1%D1%82%D1%80%D0%B8%D0%BC%D1%8B" target="_blank">Part 2</a>
+                        <td>Avoki</td>
+                        <td>85</td>
+                        <td><a href="https://www.youtube.com/watch?v=zxg8YUJtZ_M&ab_channel=luisfelipemognon" target="_blank">Full</a>
                             <br>
-                            <small>Jul 2021</small>
+                            <small>Sep 2023</small>
                         </td>
                     </tr>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <td>BiggiBossss</td>
+                        <td>69</td>
+                        <td><a href="https://www.youtube.com/watch?v=OHzrAOsY7C4&ab_channel=BiggiBossss-%D0%9D%D0%B5%D0%94%D0%BE%D0%A1%D1%82%D1%80%D0%B8%D0%BC%D1%8B" target="_blank">Part 1</a> <a href="https://www.youtube.com/watch?v=ARLNlsqMN0I&ab_channel=BiggiBossss-%D0%9D%D0%B5%D0%94%D0%BE%D0%A1%D1%82%D1%80%D0%B8%D0%BC%D1%8B" target="_blank">Part 2</a>
+                            <br>
+                        </td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>WarCrabft</td>
                         <td>55</td>
                         <td><a href="https://www.youtube.com/watch?v=tjRUXaquzTg&t=2551s&ab_channel=ManaGroveNoCommentaryGameplays" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>A.damz</td>
                         <td>39</td>
                         <td><a href="https://www.youtube.com/watch?v=6umXwNlY7A4&t=1421s&ab_channel=Qu%C3%A2nQuanhQu%E1%BA%A9n" target="_blank">Full</a></td>
@@ -346,22 +360,30 @@
                 </thead>
                 <tbody>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-person-rifle text-danger"></i></th>
+                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
+                        <td>SiberianPsych0</td>
+                        <td>57</td>
+                        <td><a href="https://www.youtube.com/watch?v=vPT_K6OQxbE&t=63s&ab_channel=SiberianPsych0" target="_blank">Full</a>
+                            <br>
+                            <small>Feb 2023</small>
+                        </td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-person-rifle text-danger"></i></th>
                         <td>ABA-180MM</td>
                         <td>28</td>
                         <td><a href="https://www.youtube.com/watch?v=rz3vFs1akc4&ab_channel=JYSoon" target="_blank">Full</a>
                             <br>
-                            <small>Jun 2023</small>
                         </td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>Renegade LK</td>
                         <td>22</td>
                         <td><a href="https://www.youtube.com/watch?v=uqYB9sQ6lXM&ab_channel=RenegadeLK" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>titojimmyyy</td>
                         <td>15</td>
                         <td><a href="https://www.youtube.com/watch?v=Jek6mCBMCUU" target="_blank">Full</a></td>
@@ -488,7 +510,7 @@
                         <td><a href="https://www.youtube.com/watch?v=VQnrGE4ixkY" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><i class="fa-solid fa-person-rifle text-danger"></i></th>
+                        <th scope="row"><i class="fa-solid fa-person-rifle text-danger"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
                         <td>SiberianPsych0</td>
                         <td>20</td>
                         <td><a href="https://www.youtube.com/watch?v=xvGjaTjMauM&ab_channel=SiberianPsych0" target="_blank">Full</a></td>
@@ -556,7 +578,7 @@
                         <td><a href="https://www.youtube.com/watch?v=zGT5wC5MUBI&ab_channel=WesleyAnge" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
                         <td>SiberianPsych0</td>
                         <td>41</td>
                         <td><a href="https://www.youtube.com/watch?v=8wIvRcx-KJg&ab_channel=SiberianPsych0" target="_blank">Full</a></td>
@@ -631,13 +653,19 @@
                         </td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group text-success"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
                         <td>SiberianPsych0</td>
                         <td>70</td>
                         <td><a href="https://www.youtube.com/watch?v=Ao2Fd6WEdB4&ab_channel=SiberianPsych0" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
+                        <td>Senku_Jo</td>
+                        <td>50</td>
+                        <td><a href="https://www.youtube.com/watch?v=phaws8OfxVY&t=38s&ab_channel=Senku_Jo" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>LongBienStreet</td>
                         <td>19</td>
                         <td><a href="https://www.youtube.com/watch?v=xrpYWAqRy-4&ab_channel=Tr%E1%BB%8Dng%C4%90%E1%BA%A1t" target="_blank">Full</a></td>
@@ -667,7 +695,7 @@
                 </thead>
                 <tbody>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
                         <td>SiberianPsych0</td>
                         <td>45</td>
                         <td><a href="https://www.youtube.com/watch?v=2_FSYDw7So8&ab_channel=SiberianPsych0" target="_blank">Full</a>
