--- a/horde.html
+++ b/horde.html
@@ -70,12 +70,18 @@
                     </tr>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/secondPlace.png "><i class="fa-solid fa-people-group text-success"></i></th>
+                        <td>LG Feared</td>
+                        <td>39</td>
+                        <td><a href="https://www.youtube.com/watch?v=WDDavXYXxgw&t=430s&ab_channel=LGFeared" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><img src="images/thirdPlace.png "><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>bomicbon</td>
                         <td>34</td>
                         <td><a href="https://www.youtube.com/watch?v=CjFBEdCUWmE&ab_channel=bomicbon" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>titojimmyyy</td>
                         <td>32</td>
                         <td><a href="https://www.youtube.com/watch?v=hwuhoOitGNI" target="_blank">Full</a></td>
@@ -130,24 +136,44 @@
                 <tbody>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i> </th>
-                        <td>Gamexia</td>
-                        <td>33</td>
-                        <td><a href="https://www.youtube.com/watch?v=SeG1MoI8ByA&ab_channel=GAMEXIA" target="_blank">Full</a>
+                        <td>PheaktraCapo</td>
+                        <td>35</td>
+                        <td><a href="https://www.youtube.com/watch?v=W4Si4I8kVt4&ab_channel=GamingHouse-byCAPO" target="_blank">Full</a>
                             <br>
-                            <small>Aug 2023</small>
+                            <small>Sep 2023</small>
                         </td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
-                        <td>GreatDragolas</td>
-                        <td>19</td>
-                        <td><a href="https://www.youtube.com/watch?v=WY3A_7or2jI&ab_channel=FireTeamShooters" target="_blank">Full</a></td>
+                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group text-success"></i> </th>
+                        <td>ebabyz</td>
+                        <td>33</td>
+                        <td><a href="https://www.youtube.com/watch?v=AHNBx1e54m4&ab_channel=EBABYZ" target="_blank">Full</a>
+                        </td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group text-success"></i> </th>
+                        <td>Gamexia</td>
+                        <td>33</td>
+                        <td><a href="https://www.youtube.com/watch?v=SeG1MoI8ByA&ab_channel=GAMEXIA" target="_blank">Full</a>
+                        </td>
                     </tr>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
-                        <td>LordGalller</td>
-                        <td>9</td>
-                        <td><a href="https://www.youtube.com/watch?v=ijS7pH6LKlU&t=18s&ab_channel=FireTeamShooters" target="_blank">Full</a></td>
+                        <td>Teee-I</td>
+                        <td>26</td>
+                        <td><a href="https://www.youtube.com/watch?v=r5KWOwO2ol0&ab_channel=Tee-I" target="_blank">Part 1</a> <a href="https://www.youtube.com/watch?v=cUrL47_PffM&ab_channel=Tee-I" target="_blank">Part 2</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <td>NieR 777</td>
+                        <td>24</td>
+                        <td><a href="https://www.youtube.com/watch?v=kpsTejPLUsY&ab_channel=NieRGaming" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <td>GreatDragolas</td>
+                        <td>19</td>
+                        <td><a href="https://www.youtube.com/watch?v=WY3A_7or2jI&ab_channel=FireTeamShooters" target="_blank">Full</a></td>
                     </tr>
                 </tbody>
             </table>
@@ -252,21 +278,28 @@
                 <tbody>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
-                        <td>Renegade LK</td>
-                        <td>31</td>
-                        <td><a href="https://www.youtube.com/watch?v=oXVFK3sWhAE&t=28s&ab_channel=RenegadeLK" target="_blank">Full</a>
+                        <td>ChristDior</td>
+                        <td>60</td>
+                        <td><a href="https://www.youtube.com/watch?v=FeasDPsB5Fg&ab_channel=WenHalloWen" target="_blank">Full</a>
                             <br>
-                            <small>Mar 2023</small>
+                            <small>Apr 2023</small>
                         </td>
                     </tr>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <td>Renegade LK</td>
+                        <td>31</td>
+                        <td><a href="https://www.youtube.com/watch?v=oXVFK3sWhAE&t=28s&ab_channel=RenegadeLK" target="_blank">Full</a>
+                        </td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>yahowyada</td>
                         <td>30</td>
                         <td><a href="https://www.youtube.com/watch?v=Zg-UzLFCNjc&t=8160s&ab_channel=yahowyadaTV" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>SGTBrianTheYoshi</td>
                         <td>23</td>
                         <td><a href="https://www.youtube.com/watch?v=aWv8QJW8wQw" target="_blank">Full</a></td>
@@ -303,7 +336,7 @@
                 <tbody>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
-                        <td>Senku_Jo2</td>
+                        <td>Senku_Jo</td>
                         <td>55</td>
                         <td><a href="https://www.youtube.com/watch?v=VRUy7Q9YTqg&ab_channel=Senku_Jo2" target=" _blank">Full</a>
                             <br>
@@ -468,7 +501,19 @@
                         <td><a href="https://www.twitch.tv/videos/1934502705" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
+                        <td>Senku_Jo</td>
+                        <td>58</td>
+                        <td><a href="https://www.youtube.com/watch?v=5h_vln-4_BY&ab_channel=Senku_Jo" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <td>ChristDior</td>
+                        <td>55</td>
+                        <td><a href="https://www.youtube.com/watch?v=oACXgWaRPcs&ab_channel=WenHalloWen" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>Gobuemon</td>
                         <td>40</td>
                         <td><a href="https://www.youtube.com/watch?v=wYyXl_J3ks4" target="_blank">Full</a></td>
@@ -508,6 +553,12 @@
                         </td>
                         <td>34</td>
                         <td><a href="https://www.youtube.com/watch?v=VQnrGE4ixkY" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <td>Bens</td>
+                        <td>21</td>
+                        <td><a href="https://www.youtube.com/watch?v=MYpAjIDUjyM&ab_channel=Bensu%C3%B6zg%C3%BCr" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
                         <th scope="row"><i class="fa-solid fa-person-rifle text-danger"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
@@ -666,6 +717,12 @@
                     </tr>
                     <tr class="text-center align-middle">
                         <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <td>ChristDior</td>
+                        <td>36</td>
+                        <td><a href="https://www.youtube.com/watch?v=tl7vDhrzoq4&ab_channel=WenHalloWen" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>LongBienStreet</td>
                         <td>19</td>
                         <td><a href="https://www.youtube.com/watch?v=xrpYWAqRy-4&ab_channel=Tr%E1%BB%8Dng%C4%90%E1%BA%A1t" target="_blank">Full</a></td>
@@ -705,12 +762,18 @@
                     </tr>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <td>ChristDior</td>
+                        <td>39</td>
+                        <td><a href="https://www.youtube.com/watch?v=OM_aEhlP_z8&ab_channel=WenHalloWen" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>LongBienStreet</td>
                         <td>18</td>
                         <td><a href="https://www.youtube.com/watch?v=TQKaulcvGbc&ab_channel=Tr%E1%BB%8Dng%C4%90%E1%BA%A1t" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>panoramix1412</td>
                         <td>10</td>
                         <td><a href="https://www.youtube.com/watch?v=g9bqmLe5oww&ab_channel=TripleJump" target="_blank">Full</a></td>
