--- a/horde.html
+++ b/horde.html
@@ -136,29 +136,35 @@
                 <tbody>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i> </th>
-                        <td>PheaktraCapo</td>
-                        <td>35</td>
-                        <td><a href="https://www.youtube.com/watch?v=W4Si4I8kVt4&ab_channel=GamingHouse-byCAPO" target="_blank">Full</a>
+                        <td>E7S4</td>
+                        <td>42</td>
+                        <td><a href="https://www.twitch.tv/videos/1945739977" target="_blank">Full</a>
                             <br>
-                            <small>Sep 2023</small>
+                            <small>Oct 2023</small>
                         </td>
                     </tr>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group text-success"></i> </th>
+                        <td>PheaktraCapo</td>
+                        <td>35</td>
+                        <td><a href="https://www.youtube.com/watch?v=W4Si4I8kVt4&ab_channel=GamingHouse-byCAPO" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i> </th>
                         <td>ebabyz</td>
                         <td>33</td>
                         <td><a href="https://www.youtube.com/watch?v=AHNBx1e54m4&ab_channel=EBABYZ" target="_blank">Full</a>
                         </td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group text-success"></i> </th>
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i> </th>
                         <td>Gamexia</td>
                         <td>33</td>
                         <td><a href="https://www.youtube.com/watch?v=SeG1MoI8ByA&ab_channel=GAMEXIA" target="_blank">Full</a>
                         </td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>Teee-I</td>
                         <td>26</td>
                         <td><a href="https://www.youtube.com/watch?v=r5KWOwO2ol0&ab_channel=Tee-I" target="_blank">Part 1</a> <a href="https://www.youtube.com/watch?v=cUrL47_PffM&ab_channel=Tee-I" target="_blank">Part 2</a></td>
@@ -350,6 +356,12 @@
                         <td><a href="https://www.youtube.com/watch?v=BixQEj5t5eo&ab_channel=RenegadeLK" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
+                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <td>ApSingh01</td>
+                        <td>30</td>
+                        <td><a href="https://www.youtube.com/watch?v=H3sfQw7BB8A&ab_channel=ApSinghGaming" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
                         <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>Gamexia</td>
                         <td>17</td>
@@ -446,8 +458,25 @@
                 </thead>
                 <tbody>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i>
-                            <br><img src="images/trophy.png"><img src="images/trophy.png">
+                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <td class="dropup">
+                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button>
+                            <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
+                                <li><small class="dropdown-item-text text-light">gogu7382</small></li>
+                                <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
+                                <li><small class="dropdown-item-text text-light">HiRUnknown</small></li>
+                                <li><small class="dropdown-item-text text-light">terihlon</small></li>
+                            </ul>
+                        </td>
+                        <td>91</td>
+                        <td><a href="https://www.twitch.tv/videos/1956988311" target="_blank">Full</a>
+                            <br>
+                            <small>Oct 2023</small>
+                        </td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i>
+                            <br>
                         </th>
                         <td class="dropup">
                             <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button><br><small class="text-warning">(HORDE IMMUNITY)</small>
@@ -461,8 +490,6 @@
                         </td>
                         <td>86 </td>
                         <td><a href="https://www.twitch.tv/videos/1935419711" target="_blank">Full</a>
-                            <br>
-                            <small>Sep 2023</small>
                         </td>
                     </tr>
                     <tr class="text-center align-middle">
@@ -487,18 +514,10 @@
                         <td><a href="https://www.youtube.com/watch?v=LABCyfjCNH0&list=PLDYihq39QKsn5ne3G3smRkvW-3hd8zOmi&index=1&ab_channel=%E8%B2%93%E7%99%BD" target="_blank">Part 1</a> <a href="https://www.youtube.com/watch?v=6Mu7rN6Kka8&list=PLDYihq39QKsn5ne3G3smRkvW-3hd8zOmi&index=2&ab_channel=%E8%B2%93%E7%99%BD" target="_blank">Part 2</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
-                        <td class="dropup">
-                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button>
-                            <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
-                                <li><small class="dropdown-item-text text-light">gogu7382</small></li>
-                                <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
-                                <li><small class="dropdown-item-text text-light">HiRUnknown</small></li>
-                                <li><small class="dropdown-item-text text-light">terihlon</small></li>
-                            </ul>
-                        </td>
-                        <td>74</td>
-                        <td><a href="https://www.twitch.tv/videos/1934502705" target="_blank">Full</a></td>
+                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <td>貓白</td>
+                        <td>78</td>
+                        <td><a href="https://www.youtube.com/watch?v=rFGKo2abUHw" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
@@ -591,7 +610,16 @@
                 </thead>
                 <tbody>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
+                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <td>一波几十块你玩什么命啊</td>
+                        <td>86</td>
+                        <td><a href="https://www.youtube.com/watch?v=ALT7tc8lYTA&ab_channel=yyz" target="_blank">Full</a>
+                            <br>
+                            <small>Oct 2023</small>
+                        </td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group text-success"></i><br></th>
                         <td class="dropup">
                             <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button>
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
@@ -604,12 +632,10 @@
                         </td>
                         <td>75</td>
                         <td><a href="https://www.twitch.tv/videos/1804004015" target="_blank">Full</a>
-                            <br>
-                            <small>Apr 2023</small>
                         </td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td class="dropup">
                             <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Humildad</button>
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
@@ -623,7 +649,7 @@
                         <td><a href="https://www.youtube.com/watch?v=usyUM4H49_s&t=8779s&ab_channel=KimPetrasandGames" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>WesleyAnge</td>
                         <td>61</td>
                         <td><a href="https://www.youtube.com/watch?v=zGT5wC5MUBI&ab_channel=WesleyAnge" target="_blank">Full</a></td>
