Oct 21 update, edit group details

--- a/horde.html
+++ b/horde.html
@@ -465,7 +465,7 @@
                                 <li><small class="dropdown-item-text text-light">gogu7382</small></li>
                                 <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
                                 <li><small class="dropdown-item-text text-light">HiRUnknown</small></li>
-                                <li><small class="dropdown-item-text text-light">terihlon</small></li>
+                                <li><small class="dropdown-item-text text-light">Crispokringle</small></li>
                             </ul>
                         </td>
                         <td>91</td>
