--- a/horde.html
+++ b/horde.html
@@ -29,12 +29,93 @@
     <!-- BODY Content -->
     <div class="d-flex justify-content-center my-4">
         <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-            <input type="radio" class="btn-check" name="btnradio" id="btnradio1" checked>
+            <input type="radio" class="btn-check" name="btnradio" id="btnradio0" checked>
+            <label class="btn btn-outline-light" for="btnradio0">BRIEF</label>
+
+            <input type="radio" class="btn-check" name="btnradio" id="btnradio1">
             <label class="btn btn-outline-light" for="btnradio1">HARD</label>
 
             <input type="radio" class="btn-check" name="btnradio" id="btnradio2">
             <label class="btn btn-outline-light" for="btnradio2">NORMAL</label>
 
+        </div>
+    </div>
+    <!-- CODE DIVISION -->
+    <div class="BOX0">
+        <div class="col-md-8 col-12 my-4 mx-auto">
+            <div>
+                <div class="text-light h2 d-flex justify-content-center align-items-center my-4 font-monospace">HORDE LEADERBOARD</div>
+            </div>
+            <table class="table table-striped table-borderless rounded-5 table-dark">
+                <thead>
+                    <tr class="text-center align-middle font-monospace fs-5">
+                        <th scope="col" class="text-info">MAP</th>
+                        <th scope="col" class="text-info">Player/Group</th>
+                        <th scope="col" class="text-info">Wave #</th>
+                    </tr>
+                </thead>
+                <tbody class="font-monospace">
+                    <tr class="text-center align-middle">
+                        <td class="text-danger">XL TOKYO (H)</td>
+                        <td>SiberianPsych0</td>
+                        <td>57</td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <td class="text-danger">XL ROME (H)</td>
+                        <td class="dropup">
+                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button>
+                            <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
+                                <li><small class="dropdown-item-text text-light">gogu7382</small></li>
+                                <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
+                                <li><small class="dropdown-item-text text-light">HiRUnknown</small></li>
+                                <li><small class="dropdown-item-text text-light">Crispokringle</small></li>
+                            </ul>
+                        </td>
+                        <td>91</td>
+                        <td></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <td class="text-danger">SOUTH KOREA (H)</td>
+                        <td>一波几十块你玩什么命啊</td>
+                        <td>86</td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <td class="text-danger">NEW YORK (H)</td>
+                        <td>貓白</td>
+                        <td>82</td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <td class="text-danger">JERUSALEM (H)</td>
+                        <td>SiberianPsych0</td>
+                        <td>60</td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <td class="text-warning">XL TOKYO (N)</td>
+                        <td>Senku_Jo</td>
+                        <td>66</td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <td class="text-warning">XL ROME (N)</td>
+                        <td>E7S4</td>
+                        <td>42</td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <td class="text-warning">SOUTH KOREA (N)</td>
+                        <td>Avoki</td>
+                        <td>85</td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <td class="text-warning">NEW YORK (N)</td>
+                        <td>ChristDior</td>
+                        <td>60</td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <td class="text-warning">JERUSALEM (N)</td>
+                        <td>Senku_Jo</td>
+                        <td>55</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
     <!-- CODE DIVISION -->
@@ -780,10 +861,10 @@
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
                         <td>SiberianPsych0</td>
-                        <td>45</td>
-                        <td><a href="https://www.youtube.com/watch?v=2_FSYDw7So8&ab_channel=SiberianPsych0" target="_blank">Full</a>
+                        <td>60</td>
+                        <td><a href="https://www.youtube.com/watch?v=in3Vo60pWzo" target="_blank">Full</a>
                             <br>
-                            <small>Mar 2023</small>
+                            <small>Aug 2023</small>
                         </td>
                     </tr>
                     <tr class="text-center align-middle">
