Updated leaderboard and fixed styling

--- a/horde.html
+++ b/horde.html
@@ -71,23 +71,23 @@
                                 <li><small class="dropdown-item-text text-light">Crispokringle</small></li>
                             </ul>
                         </td>
-                        <td>91</td>
+                        <td><small class="h3 text-warning text-bold">91</small></td>
                         <td></td>
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-danger">SOUTH KOREA (H)</td>
-                        <td>一波几十块你玩什么命啊</td>
-                        <td>86</td>
+                        <td>睡姿决定发型</td>
+                        <td><small class="h4 text-danger text-bold">86</small></td>
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-danger">NEW YORK (H)</td>
                         <td>貓白</td>
-                        <td>82</td>
+                        <td><small class="h4 text-danger text-bold">82</small></td>
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-danger">JERUSALEM (H)</td>
-                        <td>SiberianPsych0</td>
-                        <td>60</td>
+                        <td>睡姿决定发型</td>
+                        <td><small class="h4 text-danger text-bold">81</small></td>
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-warning">XL TOKYO (N)</td>
@@ -102,7 +102,7 @@
                     <tr class="text-center align-middle">
                         <td class="text-warning">SOUTH KOREA (N)</td>
                         <td>Avoki</td>
-                        <td>85</td>
+                        <td><small class="h4 text-danger text-bold">85</small></td>
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-warning">NEW YORK (N)</td>
@@ -486,7 +486,7 @@
                 </thead>
                 <tbody>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
+                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>SiberianPsych0</td>
                         <td>57</td>
                         <td><a href="https://www.youtube.com/watch?v=vPT_K6OQxbE&t=63s&ab_channel=SiberianPsych0" target="_blank">Full</a>
@@ -661,7 +661,7 @@
                         <td><a href="https://www.youtube.com/watch?v=MYpAjIDUjyM&ab_channel=Bensu%C3%B6zg%C3%BCr" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><i class="fa-solid fa-person-rifle text-danger"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
+                        <th scope="row"><i class="fa-solid fa-person-rifle text-danger"></i></th>
                         <td>SiberianPsych0</td>
                         <td>20</td>
                         <td><a href="https://www.youtube.com/watch?v=xvGjaTjMauM&ab_channel=SiberianPsych0" target="_blank">Full</a></td>
@@ -691,8 +691,8 @@
                 </thead>
                 <tbody>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
-                        <td>一波几十块你玩什么命啊</td>
+                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
+                        <td>睡姿决定发型</td>
                         <td>86</td>
                         <td><a href="https://www.youtube.com/watch?v=ALT7tc8lYTA&ab_channel=yyz" target="_blank">Full</a>
                             <br>
@@ -736,7 +736,7 @@
                         <td><a href="https://www.youtube.com/watch?v=zGT5wC5MUBI&ab_channel=WesleyAnge" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
+                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>SiberianPsych0</td>
                         <td>41</td>
                         <td><a href="https://www.youtube.com/watch?v=8wIvRcx-KJg&ab_channel=SiberianPsych0" target="_blank">Full</a></td>
@@ -811,7 +811,7 @@
                         </td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group text-success"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
+                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>SiberianPsych0</td>
                         <td>70</td>
                         <td><a href="https://www.youtube.com/watch?v=Ao2Fd6WEdB4&ab_channel=SiberianPsych0" target="_blank">Full</a></td>
@@ -860,21 +860,28 @@
                 <tbody>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
-                        <td>SiberianPsych0</td>
-                        <td>60</td>
-                        <td><a href="https://www.youtube.com/watch?v=in3Vo60pWzo" target="_blank">Full</a>
+                        <td>睡姿决定发型</td>
+                        <td>81</td>
+                        <td><a href="https://www.youtube.com/watch?v=AkU3kfc2TLU&ab_channel=yyz" target="_blank">Full</a>
                             <br>
-                            <small>Aug 2023</small>
+                            <small>Oct 2023</small>
                         </td>
                     </tr>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <td>SiberianPsych0</td>
+                        <td>60</td>
+                        <td><a href="https://www.youtube.com/watch?v=in3Vo60pWzo" target="_blank">Full</a>
+                        </td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>ChristDior</td>
                         <td>39</td>
                         <td><a href="https://www.youtube.com/watch?v=OM_aEhlP_z8&ab_channel=WenHalloWen" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
+                        <th scope="row"><i class="fa-solid fa-people-group text-success"></i></th>
                         <td>LongBienStreet</td>
                         <td>18</td>
                         <td><a href="https://www.youtube.com/watch?v=TQKaulcvGbc&ab_channel=Tr%E1%BB%8Dng%C4%90%E1%BA%A1t" target="_blank">Full</a></td>
